add json support

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,10 +6,13 @@ set(GOOGLETEST_SRC
         libs/googletest/googletest/src/gtest-all.cc
         libs/googletest/googletest/src/gtest_main.cc)
 
+set(TESTS_SRC
+        utils_test.cpp)
+
 set(GDRIVE_TESTS_SRC
         gdrive/model/gdrive_user_test.cpp)
 
-add_executable(gdrive_tests ${GDRIVE_TESTS_SRC} ${GOOGLETEST_SRC})
+add_executable(gdrive_tests ${TESTS_SRC} ${GDRIVE_TESTS_SRC} ${GOOGLETEST_SRC})
 target_link_libraries(gdrive_tests
         ccd)
 target_include_directories(gdrive_tests
