--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,3 +7,6 @@ target_link_libraries(gdrive_examples ccd)
 
 add_executable(dropbox_examples dropbox_examples.cpp)
 target_link_libraries(dropbox_examples ccd)
+
+add_executable(curl_transport_examples curl_transport_examples.cpp)
+target_link_libraries(curl_transport_examples ccd)
