--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,5 +8,5 @@ target_link_libraries(gdrive_examples ccd)
 add_executable(dropbox_examples dropbox_examples.cpp)
 target_link_libraries(dropbox_examples ccd)
 
-add_executable(curl_transport_examples curl_transport_examples.cpp)
-target_link_libraries(curl_transport_examples ccd)
+add_executable(http_transport_examples http_transport_examples.cpp)
+target_link_libraries(http_transport_examples ccd)
