--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ addons:
       - gcc-8
       - g++-8
       - cmake
-      - libwebsocketpp-dev
       - wget
 
 before_script:
@@ -24,15 +23,9 @@ before_script:
   - wget https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.tar.gz
   - tar xf boost_1_69_0.tar.gz
   - cd boost_1_69_0
-  - ./bootstrap.sh --with-libraries=system,thread,random,filesystem,chrono,atomic,date_time,regex
+  - ./bootstrap.sh --with-libraries=atomic,chrono,date_time,system,thread
   - ./b2 --toolset=gcc-8
   - sudo ./b2 -d0 install
-  - cd ..
-
-  - git clone https://github.com/Microsoft/cpprestsdk.git casablanca
-  - mkdir casablanca_build && cd casablanca_build
-  - cmake -DBUILD_TESTS=OFF -DBUILD_SAMPLES=OFF -DCPPREST_EXCLUDE_WEBSOCKETS=OFF ../casablanca/
-  - sudo make install -j $(nproc)
   - cd ..
 
   - git clone https://github.com/Tencent/rapidjson.git rapidjson
