--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(Boost REQUIRED COMPONENTS thread iostreams)
+find_package(Boost REQUIRED COMPONENTS iostreams regex thread)
 find_package(OpenSSL REQUIRED)
 find_package(RapidJSON REQUIRED)
 
